force-app/main/default/objects/User/fields/GroupId__c.field-meta.xml
<CustomField>
    <fullName>GroupId__c</fullName>
    <label>GroupId</label>
    <length>40</length>
    <type>Text</type>
</CustomField>