force-app/main/default/objects/User/fields/RetailerAccess__c.field-meta.xml
<CustomField>
    <fullName>RetailerAccess__c</fullName>
    <label>RetailerAccess</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TEST_RETAILER_1</fullName>
            </value>
            <value>
                <fullName>TEST_RETAILER_2</fullName>
            </value>
            <value>
                <fullName>TEST_RETAILER_3</fullName>
            </value>
            <value>
                <fullName>TEST_RETAILER_4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>